# pxr-effector-uncoupling

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  fetch_atlas.yml
data/cache/: gtex_ABCC2.json  gtex_ALB.json  gtex_CYP2C8.json  gtex_CYP2C9.json  gtex_CYP3A5.json  gtex_GAPDH.json  gtex_HNF4A.json  gtex_NR1I2.json  gtex_SLCO1B1.json  lincs_LINCSCP_100056.tsv  lincs_LINCSCP_100057.tsv  lincs_LINCSCP_100059.tsv  lincs_LINCSCP_100060.tsv  lincs_LINCSCP_100061.tsv  lincs_LINCSCP_111889.tsv  lincs_LINCSCP_111890.tsv  lincs_LINCSCP_111891.tsv  lincs_LINCSCP_111892.tsv  lincs_LINCSCP_111893.tsv  lincs_LINCSCP_111894.tsv  lincs_LINCSCP_113307.tsv  lincs_LINCSCP_113308.tsv  lincs_LINCSCP_113309.tsv  lincs_LINCSCP_113310.tsv  lincs_LINCSCP_113311.tsv  lincs_LINCSCP_113661.tsv  lincs_LINCSCP_113664.tsv  lincs_LINCSCP_113665.tsv  lincs_LINCSCP_113666.tsv  lincs_LINCSCP_115786.tsv  lincs_LINCSCP_115787.tsv  lincs_LINCSCP_115788.tsv  lincs_LINCSCP_115789.tsv  lincs_LINCSCP_115790.tsv  lincs_LINCSCP_116140.tsv  lincs_LINCSCP_116141.tsv  lincs_LINCSCP_116142.tsv  (+102 more)
manuscript/: manuscript.md
notebooks/: 01_nr1i2_atlas.ipynb  02_coupling.ipynb  03_decoupling.ipynb  04_heatmap.ipynb  05_robustness.ipynb
scripts/: build_provenance.py  fetch_atlas.py  render_supp_figures.py  run_analysis.py  run_geo_rifampicin.py  run_gtex.py  run_lincs.py  run_negative_control.py  run_opentargets.py  run_per_dataset.py  run_robustness.py
tests/: test_coupling.py  test_coupling_extra.py  test_statistics.py
(+45 files in other folders)
