[project]
name = "pxr-uncoupling"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cellxgene-census>=1.16.0",
    "anndata>=0.10",
    "scanpy>=1.10",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "pyarrow>=15",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "httpx>=0.27",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "jupyter>=1.0",
    "ipykernel>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pxr_uncoupling"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
